# sdd-workflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSISTENCY_CHECKLIST.md  INTEGRATION.md  README.md  SKILL.md  SKILL.yaml  USAGE.md  dependency-example.md  design-doc-template.md  interface-example.md  mypy.ini  phases-reference.md  pyproject.toml  requirements.txt  ruff.toml  visualization-guide.md
.sdd/error_logs/: err_20260507_193801_392910.json  err_20260507_193801_394809.json  err_20260507_193801_395936.json  err_20260507_193801_396845.json  err_20260507_193801_397681.json  err_20260507_193801_398589.json  (+49 more)
config/: artifact_checker.yaml  constitution_enforcer.yaml  context_loader.yaml  context_monitor.yaml  error_recovery.yaml  loop_detection.yaml  privacy_filter.yaml  quality.yaml  trace_analysis.yaml  understanding.yaml
docs/: FINAL_COMPLETE_REPORT.md  FINAL_PROJECT_COMPLETE.md  P0_100_PERCENT_COMPLETE.md  PROJECT_COMPLETE.md  ULTIMATE_FINAL_REPORT.md  ULTIMATE_FIX_SUMMARY.md  WORKFLOW_IMPLEMENTATION_MAP.md  context_loss_risk.md  critical_issues_found.md  defects_report.md  document_merge_plan.md  document_merge_plan_complete.md  engineering_analysis_report.md  final_engineering_summary.md  final_fix_complete_report.md  final_fix_summary.md  final_thorough_check.md  fourth_round_analysis.md  highest_principles_enforcement.md  improvements_summary.md  issue_fix_status_summary.md  missing_features_analysis.md  p0_fix_summary.md  p1_critical_fixes_complete.md  remaining_issues.md  remaining_issues_checklist.md  second_round_analysis.md  sixth_round_fixes_complete.md  skill_full_update_report.md  skill_inconsistency_report.md  third_round_analysis.md
evals/: evals.json
middleware/: __init__.py  artifact_complete.py  base.py  loop_detection.py  phase_compression.py  phase_gate.py
references/: usage_guide.md
scripts/: __init__.py  artifact_checker.py  command_handler.py  constitution_enforcer.py  context_loader.py  pre_commit_hook.py  simulate_developer.py  test_memory.py  test_modules.py  test_workflow.py  trace_collector.py  workflow_coordinator.py
src/: __init__.py  cli.py  config_manager.py  constants.py  context_injector.py  context_monitor.py  coordinator.py  director.py  error_recovery.py  memory_manager.py  project_initializer.py  workflow.py
src/memory/: __init__.py  (+5 more)
templates/: ai_coding_principles.md  change_summary_template.md  task_plan_template.md
tests/: test_checkpoint_manager.py  test_cli.py  test_context_monitor.py  test_core_principles.py  test_director.py  test_error_recovery.py  test_improvements.py  test_layer2_improvement.py  test_nexus_map.py  test_phases.py  test_privacy_filter.py  test_progressive_disclosure.py  test_workflow_integration.py
(+38 files in other folders)
